--- a/portfolio-project/frontend/index.html
+++ b/portfolio-project/frontend/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
     <meta name="description" content="Yiğit Okur - Cloud/DevOps Engineer Portfolio" />
     <meta name="author" content="Yiğit Okur" />
     <meta name="keywords" content="DevOps, Cloud, AWS, Docker, Kubernetes, Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Yiğit Okur - Cloud/DevOps Engineer" />
+    <meta property="og:description" content="Cloud/DevOps and software engineering portfolio." />
+    <meta property="og:url" content="https://portfolio.yigitokur.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="canonical" href="https://portfolio.yigitokur.com/" />
     
     <!-- Preconnect for faster font loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
